# manpower

./: README.md  pyproject.toml  setup.py
manpower/: hooks.py  patches.txt
manpower/manpower/doctype/authorized_manpower_details/: authorized_manpower_details.json  authorized_manpower_details.py
manpower/manpower/page/employment_contract/: employment_contract.html  employment_contract.js  employment_contract.json
manpower/manpower/setup/: install.py
manpower/public/js/: employee_contract.js
manpower/www/: employment_contract.html  employment_contract.py
