[project]
name = "manpower"
authors = [
    { name = "User", email = "test@example.com"}
]
description = "Frappe custom module for Manpower Kuwait Employment Contracts"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0"
]

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0"
erpnext = ">=14.0.0"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
